--- a/TeamName/project.ipynb
+++ b/TeamName/project.ipynb
@@ -5,7 +5,7 @@
    "id": "flying-triple",
    "metadata": {},
    "source": [
-    "# Shor's Algorithm Implementation\n",
+    "# Modular Arithmetic and Shor's Algorithm Implementation\n",
     "## Laura Lewis\n",
     "\n",
     "For this, we used references from the following sources:<br/>\n",
