--- a/Quackers/Project.ipynb
+++ b/Quackers/Project.ipynb
@@ -9,9 +9,9 @@
     "## Team name: Quackers\n",
     "## Project: Hybrid Quantum-classical model for classification\n",
     "### Team members:\n",
-    "- ### Esteban Payares\n",
-    "- ### <your name\n",
-    "- ### <\"your name\">"
+    "-  Esteban Payares\n",
+    "-  <your name\n",
+    "-  <\"your name\">"
    ]
   },
   {
