--- a/Quackers/Project.ipynb
+++ b/Quackers/Project.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "## Methods\n",
     "To develop this model we initialize three layers, two Classical Dense Layers, and one Quantum Layer which consist of the 4 Qubit Ansatz described above. The first layer is a\n",
-    "Rectified Linear Unit (ReLU) function. The second is the quantum variational circuit of 4 Qubits. The last layer consists of a Softmax function. Once our layers are defined we performed the training of the hybrid model to classify the data given, in this case by the scikit-learn dataset make_circles which consist of two classes."
+    "Rectified Linear Unit (ReLU) function. The second is the quantum variational circuit of 4 Qubits and 4 measurements of expected values with PauliZ gates. The last layer consists of a Softmax function. Once our layers are defined we performed the training of the hybrid model to classify the data given, in this case by the scikit-learn dataset make_circles which consist of two classes."
    ]
   },
   {
