--- a/Quackers/Project.ipynb
+++ b/Quackers/Project.ipynb
@@ -100,7 +100,7 @@
     "np.random.seed(42)\n",
     "tf.random.set_seed(42)\n",
     "\n",
-    "X, y = make_circles(n_samples=200, noise=0.1, factor=0.2, random_state=1)#make_circles(n_samples=500, noise=0.05)\n",
+    "X, y = make_circles(n_samples=200, noise=0.1, factor=0.2, random_state=1)\n",
     "y_hot = tf.keras.utils.to_categorical(y, num_classes=2)  \n",
     "\n",
     "c = [\"#00A0B0\" if y_ == 0 else \"#CC333F\" for y_ in y] \n",
