--- a/Quackers/Project.ipynb
+++ b/Quackers/Project.ipynb
@@ -10,7 +10,7 @@
     "## Project: Hybrid Quantum-classical model for classification\n",
     "### Team members:\n",
     "-  Esteban Payares\n",
-    "-  <your name\n",
+    "-  Vismai Khanderao,
     "-  <\"your name\">"
    ]
   },
