--- a/Quackers/Project.ipynb
+++ b/Quackers/Project.ipynb
@@ -11,7 +11,7 @@
     "### Team members:\n",
     "-  Esteban Payares\n",
     "-  Vismai Khanderao\n",
-    "-  <\"your name\">"
+    "-  Denis Jankovic"
    ]
   },
   {
