--- a/Team_39/qBraidChallenge.ipynb
+++ b/Team_39/qBraidChallenge.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "international-minister",
+   "execution_count": 1,
+   "id": "timely-pilot",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "configrc.store_credentials:WARNING:2021-04-11 08:21:00,947: Credentials already present. Set overwrite=True to overwrite.\n"
+      "configrc.store_credentials:WARNING:2021-04-11 09:01:44,417: Credentials already present. Set overwrite=True to overwrite.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<AccountProvider for IBMQ(hub='ibm-q', group='open', project='main')>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -25,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "inappropriate-tsunami",
+   "id": "recorded-conditions",
    "metadata": {},
    "source": [
     "My Idea is to generate two random numbers and perform some operations to form a large number on which I will apply Shor's Algorithm inorder to factorize it"
@@ -33,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "incoming-candidate",
+   "execution_count": 2,
+   "id": "developmental-geology",
    "metadata": {},
    "outputs": [
     {
@@ -62,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "general-clerk",
+   "execution_count": 3,
+   "id": "identical-football",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,13 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "scientific-conversion",
+   "execution_count": 4,
+   "id": "accessible-finger",
    "metadata": {},
    "outputs": [],
    "source": [
     "provider = IBMQ.get_provider(group=\"open\", project=\"main\")\n",
-    "backend = provider.get_backend('ibmq_qasm_simulator')\n",
+    "backend = provider.get_backend(\"simulator_stabilizer\")\n",
     "factors = Shor(c)\n",
     "result_dict = factors.run(QuantumInstance(backend, shots=1, skip_qobj_validation=False))\n",
     "result = result_dict['factors']"
@@ -87,26 +97,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "sporting-issue",
+   "execution_count": 5,
+   "id": "opponent-finance",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3]\n"
+      "The factors of 9 are:\n",
+      "3\n"
      ]
     }
    ],
    "source": [
-    "print(result)"
+    "print(\"The factors of\", c, \"are:\")\n",
+    "if(len(result) == 0):\n",
+    "    print(\"It have 0 factors as it's prime.\")\n",
+    "else:\n",
+    "    print(*result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "persistent-belief",
+   "id": "swedish-raleigh",
    "metadata": {},
    "outputs": [],
    "source": []
