--- a/QCHT/Qiskit_Explicit_n-site_Hamiltonian.ipynb
+++ b/QCHT/Qiskit_Explicit_n-site_Hamiltonian.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "permanent-daily",
+   "execution_count": 3,
+   "id": "dominican-intervention",
    "metadata": {},
    "outputs": [
     {
@@ -39,17 +39,17 @@
     "    simulator = Aer.get_backend('unitary_simulator')\n",
     "    result = np.empty(2*n-1, dtype=object) \n",
     "    unitary = np.empty(2*n-1, dtype=object) \n",
-    "    Hamiltonial=0\n",
+    "    Hamiltonian_Matrix=0\n",
     "    for i in range(0, 2*n-1):\n",
     "        result[i] = execute(qc[i], backend=simulator).result()\n",
     "        unitary[i] = result[i].get_unitary()\n",
     "        #print(unitary[i])\n",
     "        if (i<=n-2):\n",
-    "            Hamiltonial=np.add(Hamiltonial,-unitary[i])\n",
+    "            Hamiltonian_Matrix=np.add(Hamiltonian_Matrix,-unitary[i])\n",
     "        else:\n",
-    "            Hamiltonial=np.add(Hamiltonial,-h*unitary[i])\n",
-    "    print(Hamiltonial)\n",
-    "    #w, v = np.linalg.eigh(Hamiltonian)\n",
+    "            Hamiltonian_Matrix=np.add(Hamiltonian_Matrix,-h*unitary[i])\n",
+    "    print(Hamiltonian_Matrix)\n",
+    "    #w, v = np.linalg.eig(Hamiltonian_Matrix)\n",
     "    \n",
     "Hamiltonian(5,2)"
    ]
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pleased-tuition",
+   "id": "chronic-patrol",
    "metadata": {},
    "outputs": [],
    "source": []
