--- a/Quackers/Project.ipynb
+++ b/Quackers/Project.ipynb
@@ -573,7 +573,7 @@
    "metadata": {},
    "source": [
     "## Conclusions\n",
-    "As we can see from the results, it is possible to use quantum layers to explore the possibilities of quantum computing in the field of machine learning. The classification task was done with a perfect result."
+    "As we can see from the results, it is possible to use quantum layers to explore the possibilities of quantum computing in the field of machine learning. The Hybrid model was able to classify succesfully the circles of the dataset used with great performance. with Qbraid we were able to create a Quantum Machine Learning implementation, train and test it very easily thanks to an amazing working environment."
    ]
   },
   {
