--- a/QCHT/Qiskit_Explicit_n-site_Hamiltonian.ipynb
+++ b/QCHT/Qiskit_Explicit_n-site_Hamiltonian.ipynb
@@ -2,21 +2,89 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "dominican-intervention",
+   "execution_count": 8,
+   "id": "registered-circulation",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-4.+0.j -2.+0.j -2.+0.j ...  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [-2.+0.j -2.+0.j  0.+0.j ...  0.+0.j  0.+0.j  0.+0.j]\n",
-      " [-2.+0.j  0.+0.j  0.+0.j ...  0.+0.j  0.+0.j  0.+0.j]\n",
+      "The 256 x 256 Hamiltonian Matrix is:\n",
+      "[[-7.+0.j -1.+0.j -1.+0.j ...  0.+0.j  0.+0.j  0.+0.j]\n",
+      " [-1.+0.j -5.+0.j  0.+0.j ...  0.+0.j  0.+0.j  0.+0.j]\n",
+      " [-1.+0.j  0.+0.j -3.+0.j ...  0.+0.j  0.+0.j  0.+0.j]\n",
       " ...\n",
-      " [ 0.+0.j  0.+0.j  0.+0.j ...  0.+0.j  0.+0.j -2.+0.j]\n",
-      " [ 0.+0.j  0.+0.j  0.+0.j ...  0.+0.j -2.+0.j -2.+0.j]\n",
-      " [ 0.+0.j  0.+0.j  0.+0.j ... -2.+0.j -2.+0.j -4.+0.j]]\n"
+      " [ 0.+0.j  0.+0.j  0.+0.j ... -3.+0.j  0.+0.j -1.+0.j]\n",
+      " [ 0.+0.j  0.+0.j  0.+0.j ...  0.+0.j -5.+0.j -1.+0.j]\n",
+      " [ 0.+0.j  0.+0.j  0.+0.j ... -1.+0.j -1.+0.j -7.+0.j]]\n",
+      "The probability for each of the 256 base states is:\n",
+      "[7.84038200e-05 1.78451623e-04 4.58280633e-04 1.47139886e-04\n",
+      " 3.81636830e-04 1.34983763e-03 3.01971042e-04 1.65188284e-04\n",
+      " 4.09860376e-04 6.95935265e-04 3.64323118e-03 9.92028425e-04\n",
+      " 2.58034877e-04 7.42358978e-04 3.78770690e-04 1.50640592e-04\n",
+      " 4.09860376e-04 1.11222791e-03 1.76997600e-03 6.61296368e-04\n",
+      " 3.14546701e-03 1.19388990e-02 2.01615143e-03 1.26499018e-03\n",
+      " 2.80260557e-04 5.68226706e-04 2.03401400e-03 6.13060204e-04\n",
+      " 3.34063822e-04 1.12244196e-03 3.36901937e-04 1.65188284e-04\n",
+      " 3.81636830e-04 7.56852012e-04 2.68581278e-03 7.85457622e-04\n",
+      " 1.32062540e-03 4.29832738e-03 1.27865776e-03 6.13060204e-04\n",
+      " 3.14546701e-03 4.94194123e-03 3.00731508e-02 7.86636254e-03\n",
+      " 1.57862446e-03 4.15047075e-03 2.73917918e-03 9.92028425e-04\n",
+      " 2.58034877e-04 6.25528925e-04 1.34786210e-03 4.54015004e-04\n",
+      " 1.57862446e-03 5.69581042e-03 1.15933891e-03 6.61296368e-04\n",
+      " 3.34063822e-04 5.89211152e-04 2.83501368e-03 7.85457622e-04\n",
+      " 2.68283292e-04 8.09676737e-04 3.48738705e-04 1.47139886e-04\n",
+      " 4.58280633e-04 1.13721466e-03 2.35114236e-03 8.09676737e-04\n",
+      " 2.68581278e-03 9.91302257e-03 1.90134621e-03 1.12244196e-03\n",
+      " 1.76997600e-03 3.24171102e-03 1.45933934e-02 4.15047075e-03\n",
+      " 1.34786210e-03 4.15782659e-03 1.71625595e-03 7.42358978e-04\n",
+      " 3.64323118e-03 1.03065637e-02 1.45933934e-02 5.69581042e-03\n",
+      " 3.00731508e-02 1.16231058e-01 1.83626892e-02 1.19388990e-02\n",
+      " 2.03401400e-03 4.40519588e-03 1.36163957e-02 4.29832738e-03\n",
+      " 2.83501368e-03 9.91302257e-03 2.58102835e-03 1.34983763e-03\n",
+      " 3.01971042e-04 6.53680501e-04 1.90134621e-03 5.89211152e-04\n",
+      " 1.27865776e-03 4.40519588e-03 1.08701075e-03 5.68226706e-04\n",
+      " 2.01615143e-03 3.34377959e-03 1.83626892e-02 4.94194123e-03\n",
+      " 1.15933891e-03 3.24171102e-03 1.80562872e-03 6.95935265e-04\n",
+      " 3.78770690e-04 1.00231191e-03 1.71625595e-03 6.25528925e-04\n",
+      " 2.73917918e-03 1.03065637e-02 1.80562872e-03 1.11222791e-03\n",
+      " 3.36901937e-04 6.53680501e-04 2.58102835e-03 7.56852012e-04\n",
+      " 3.48738705e-04 1.13721466e-03 3.81220375e-04 1.78451623e-04\n",
+      " 1.78451623e-04 3.81220375e-04 1.13721466e-03 3.48738705e-04\n",
+      " 7.56852012e-04 2.58102835e-03 6.53680501e-04 3.36901937e-04\n",
+      " 1.11222791e-03 1.80562872e-03 1.03065637e-02 2.73917918e-03\n",
+      " 6.25528925e-04 1.71625595e-03 1.00231191e-03 3.78770690e-04\n",
+      " 6.95935265e-04 1.80562872e-03 3.24171102e-03 1.15933891e-03\n",
+      " 4.94194123e-03 1.83626892e-02 3.34377959e-03 2.01615143e-03\n",
+      " 5.68226706e-04 1.08701075e-03 4.40519588e-03 1.27865776e-03\n",
+      " 5.89211152e-04 1.90134621e-03 6.53680501e-04 3.01971042e-04\n",
+      " 1.34983763e-03 2.58102835e-03 9.91302257e-03 2.83501368e-03\n",
+      " 4.29832738e-03 1.36163957e-02 4.40519588e-03 2.03401400e-03\n",
+      " 1.19388990e-02 1.83626892e-02 1.16231058e-01 3.00731508e-02\n",
+      " 5.69581042e-03 1.45933934e-02 1.03065637e-02 3.64323118e-03\n",
+      " 7.42358978e-04 1.71625595e-03 4.15782659e-03 1.34786210e-03\n",
+      " 4.15047075e-03 1.45933934e-02 3.24171102e-03 1.76997600e-03\n",
+      " 1.12244196e-03 1.90134621e-03 9.91302257e-03 2.68581278e-03\n",
+      " 8.09676737e-04 2.35114236e-03 1.13721466e-03 4.58280633e-04\n",
+      " 1.47139886e-04 3.48738705e-04 8.09676737e-04 2.68283292e-04\n",
+      " 7.85457622e-04 2.83501368e-03 5.89211152e-04 3.34063822e-04\n",
+      " 6.61296368e-04 1.15933891e-03 5.69581042e-03 1.57862446e-03\n",
+      " 4.54015004e-04 1.34786210e-03 6.25528925e-04 2.58034877e-04\n",
+      " 9.92028425e-04 2.73917918e-03 4.15047075e-03 1.57862446e-03\n",
+      " 7.86636254e-03 3.00731508e-02 4.94194123e-03 3.14546701e-03\n",
+      " 6.13060204e-04 1.27865776e-03 4.29832738e-03 1.32062540e-03\n",
+      " 7.85457622e-04 2.68581278e-03 7.56852012e-04 3.81636830e-04\n",
+      " 1.65188284e-04 3.36901937e-04 1.12244196e-03 3.34063822e-04\n",
+      " 6.13060204e-04 2.03401400e-03 5.68226706e-04 2.80260557e-04\n",
+      " 1.26499018e-03 2.01615143e-03 1.19388990e-02 3.14546701e-03\n",
+      " 6.61296368e-04 1.76997600e-03 1.11222791e-03 4.09860376e-04\n",
+      " 1.50640592e-04 3.78770690e-04 7.42358978e-04 2.58034877e-04\n",
+      " 9.92028425e-04 3.64323118e-03 6.95935265e-04 4.09860376e-04\n",
+      " 1.65188284e-04 3.01971042e-04 1.34983763e-03 3.81636830e-04\n",
+      " 1.47139886e-04 4.58280633e-04 1.78451623e-04 7.84038200e-05]\n",
+      "The probabilities for each of the 256 base states add up to:\n",
+      "1.00\n"
      ]
     }
    ],
@@ -25,7 +93,9 @@
     "import numpy as np\n",
     "\n",
     "def Hamiltonian(n,h):\n",
-    "    qc = np.empty(2*n-1, dtype=object) \n",
+    "    pow_n=2**n\n",
+    "    qc = np.empty(2*n-1, dtype=object)\n",
+    "    #Creating the quantum circuits that are used in the calculation of the Hamiltonian based on the number of qubits\n",
     "    for i in range(0, 2*n-1): #2n-1 is the number of factors on the n-site Hamiltonian\n",
     "        qr = QuantumRegister(n) \n",
     "        qc[i] = QuantumCircuit(qr) #create quantum circuits for each factor of the Hamiltonian\n",
@@ -35,29 +105,163 @@
     "            qc[i].z(i+1) #and value of its neighboring spin\n",
     "        else: #for the second sum of the Hamiltonian\n",
     "            qc[i].x(2*n-2-i) #2*n-2 gives the proper index since counting starts at 0\n",
-    "            \n",
+    "    #Run each circuit in the simulator        \n",
     "    simulator = Aer.get_backend('unitary_simulator')\n",
     "    result = np.empty(2*n-1, dtype=object) \n",
     "    unitary = np.empty(2*n-1, dtype=object) \n",
     "    Hamiltonian_Matrix=0\n",
+    "    #Get the results for each circuit in unitary form\n",
     "    for i in range(0, 2*n-1):\n",
     "        result[i] = execute(qc[i], backend=simulator).result()\n",
     "        unitary[i] = result[i].get_unitary()\n",
     "        #print(unitary[i])\n",
+    "        #And calculate the Hamiltonian matrix according to the formula\n",
     "        if (i<=n-2):\n",
     "            Hamiltonian_Matrix=np.add(Hamiltonian_Matrix,-unitary[i])\n",
     "        else:\n",
     "            Hamiltonian_Matrix=np.add(Hamiltonian_Matrix,-h*unitary[i])\n",
+    "    print(\"The\",pow_n,\"x\",pow_n, \"Hamiltonian Matrix is:\")\n",
     "    print(Hamiltonian_Matrix)\n",
-    "    #w, v = np.linalg.eig(Hamiltonian_Matrix)\n",
+    "    #Now that we have the Hamiltonian\n",
     "    \n",
-    "Hamiltonian(5,2)"
+    "    #find the eigenvalues and eigenvectors\n",
+    "    w, v = np.linalg.eig(Hamiltonian_Matrix)\n",
+    "    #first column of the eigenvectors is the groundstate of the system\n",
+    "    groundstate = v[:,1]\n",
+    "    #the probability to measure each basic state of n qubits\n",
+    "    probability = np.square(groundstate).real\n",
+    "    print(\"The probability for each of the\",pow_n,\"base states is:\")\n",
+    "    print(probability)\n",
+    "    print(\"The probabilities for each of the\",pow_n,\"base states add up to:\")\n",
+    "    print (\"%.2f\" % np.sum(probability))\n",
+    "    \n",
+    "Hamiltonian(8,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "assumed-library",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Hamiltonian for h=0 is\n",
+      "The 256 x 256 Hamiltonian Matrix is:\n",
+      "[[-7.+0.j  0.+0.j  0.+0.j ...  0.+0.j  0.+0.j  0.+0.j]\n",
+      " [ 0.+0.j -5.+0.j  0.+0.j ...  0.+0.j  0.+0.j  0.+0.j]\n",
+      " [ 0.+0.j  0.+0.j -3.+0.j ...  0.+0.j  0.+0.j  0.+0.j]\n",
+      " ...\n",
+      " [ 0.+0.j  0.+0.j  0.+0.j ... -3.+0.j  0.+0.j  0.+0.j]\n",
+      " [ 0.+0.j  0.+0.j  0.+0.j ...  0.+0.j -5.+0.j  0.+0.j]\n",
+      " [ 0.+0.j  0.+0.j  0.+0.j ...  0.+0.j  0.+0.j -7.+0.j]]\n",
+      "The probability for each of the 256 base states is:\n",
+      "[0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "The probabilities for each of the 256 base states add up to:\n",
+      "1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "#To test the algorithm, we should run the Hamiltonian for the two extreme cases where h=0 and h>>1, h being the intensity of the transverse field (check readme for math details)\n",
+    "\n",
+    "#for h=0, the transverse field is completely gone and therefore there is 100% chance that we measure the spin were all spins point down (basis state)\n",
+    "print(\"The Hamiltonian for h=0 is\")\n",
+    "Hamiltonian(8,0)\n",
+    "#as described by the results, the probability matrix has 0 all its elements, except one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "broke-venice",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Hamiltonian for h=100 is\n",
+      "The 256 x 256 Hamiltonian Matrix is:\n",
+      "[[  -7.+0.j -100.+0.j -100.+0.j ...    0.+0.j    0.+0.j    0.+0.j]\n",
+      " [-100.+0.j   -5.+0.j    0.+0.j ...    0.+0.j    0.+0.j    0.+0.j]\n",
+      " [-100.+0.j    0.+0.j   -3.+0.j ...    0.+0.j    0.+0.j    0.+0.j]\n",
+      " ...\n",
+      " [   0.+0.j    0.+0.j    0.+0.j ...   -3.+0.j    0.+0.j -100.+0.j]\n",
+      " [   0.+0.j    0.+0.j    0.+0.j ...    0.+0.j   -5.+0.j -100.+0.j]\n",
+      " [   0.+0.j    0.+0.j    0.+0.j ... -100.+0.j -100.+0.j   -7.+0.j]]\n",
+      "The probability for each of the 256 base states is:\n",
+      "[0.00377185 0.00380966 0.00384795 0.00380957 0.00384785 0.00388662\n",
+      " 0.00384776 0.00380957 0.00384785 0.00388643 0.00392568 0.00388652\n",
+      " 0.00384766 0.00388643 0.00384776 0.00380957 0.00384785 0.00388643\n",
+      " 0.00392549 0.00388633 0.00392558 0.00396514 0.00392549 0.00388652\n",
+      " 0.00384766 0.00388623 0.00392549 0.00388633 0.00384766 0.00388643\n",
+      " 0.00384776 0.00380957 0.00384785 0.00388643 0.00392549 0.00388633\n",
+      " 0.00392539 0.00396494 0.00392529 0.00388633 0.00392558 0.00396494\n",
+      " 0.00400499 0.00396504 0.00392539 0.00396494 0.00392549 0.00388652\n",
+      " 0.00384766 0.00388623 0.00392529 0.00388614 0.00392539 0.00396494\n",
+      " 0.00392529 0.00388633 0.00384766 0.00388623 0.00392549 0.00388633\n",
+      " 0.00384766 0.00388643 0.00384776 0.00380957 0.00384795 0.00388652\n",
+      " 0.00392558 0.00388643 0.00392549 0.00396504 0.00392539 0.00388643\n",
+      " 0.00392549 0.00396484 0.00400489 0.00396494 0.00392529 0.00396484\n",
+      " 0.00392539 0.00388643 0.00392568 0.00396504 0.00400489 0.00396494\n",
+      " 0.00400499 0.00404534 0.00400489 0.00396514 0.00392549 0.00396484\n",
+      " 0.00400489 0.00396494 0.00392549 0.00396504 0.00392558 0.00388662\n",
+      " 0.00384776 0.00388633 0.00392539 0.00388623 0.00392529 0.00396484\n",
+      " 0.00392519 0.00388623 0.00392549 0.00396484 0.00400489 0.00396494\n",
+      " 0.00392529 0.00396484 0.00392539 0.00388643 0.00384776 0.00388633\n",
+      " 0.00392539 0.00388623 0.00392549 0.00396504 0.00392539 0.00388643\n",
+      " 0.00384776 0.00388633 0.00392558 0.00388643 0.00384776 0.00388652\n",
+      " 0.00384785 0.00380966 0.00380966 0.00384785 0.00388652 0.00384776\n",
+      " 0.00388643 0.00392558 0.00388633 0.00384776 0.00388643 0.00392539\n",
+      " 0.00396504 0.00392549 0.00388623 0.00392539 0.00388633 0.00384776\n",
+      " 0.00388643 0.00392539 0.00396484 0.00392529 0.00396494 0.00400489\n",
+      " 0.00396484 0.00392549 0.00388623 0.00392519 0.00396484 0.00392529\n",
+      " 0.00388623 0.00392539 0.00388633 0.00384776 0.00388662 0.00392558\n",
+      " 0.00396504 0.00392549 0.00396494 0.00400489 0.00396484 0.00392549\n",
+      " 0.00396514 0.00400489 0.00404534 0.00400499 0.00396494 0.00400489\n",
+      " 0.00396504 0.00392568 0.00388643 0.00392539 0.00396484 0.00392529\n",
+      " 0.00396494 0.00400489 0.00396484 0.00392549 0.00388643 0.00392539\n",
+      " 0.00396504 0.00392549 0.00388643 0.00392558 0.00388652 0.00384795\n",
+      " 0.00380957 0.00384776 0.00388643 0.00384766 0.00388633 0.00392549\n",
+      " 0.00388623 0.00384766 0.00388633 0.00392529 0.00396494 0.00392539\n",
+      " 0.00388614 0.00392529 0.00388623 0.00384766 0.00388652 0.00392549\n",
+      " 0.00396494 0.00392539 0.00396504 0.00400499 0.00396494 0.00392558\n",
+      " 0.00388633 0.00392529 0.00396494 0.00392539 0.00388633 0.00392549\n",
+      " 0.00388643 0.00384785 0.00380957 0.00384776 0.00388643 0.00384766\n",
+      " 0.00388633 0.00392549 0.00388623 0.00384766 0.00388652 0.00392549\n",
+      " 0.00396514 0.00392558 0.00388633 0.00392549 0.00388643 0.00384785\n",
+      " 0.00380957 0.00384776 0.00388643 0.00384766 0.00388652 0.00392568\n",
+      " 0.00388643 0.00384785 0.00380957 0.00384776 0.00388662 0.00384785\n",
+      " 0.00380957 0.00384795 0.00380966 0.00377185]\n",
+      "The probabilities for each of the 256 base states add up to:\n",
+      "1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for h=100 the transverse field is strong enough to push every spin into equal superposition, meaning that there is an equal probability to measure the system in each one of the basic states\n",
+    "print(\"The Hamiltonian for h=100 is\")\n",
+    "Hamiltonian(8,100)\n",
+    "#as described by the results, the probability matrix elements are very close in value"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chronic-patrol",
+   "id": "experienced-mechanism",
    "metadata": {},
    "outputs": [],
    "source": []
